--- a/source/sass/elements/_form.scss
+++ b/source/sass/elements/_form.scss
@@ -1,5 +1,6 @@
-.form-control{
+form .form-inline  .form-control{
   border-radius: 0;
+  width: 100%;
 }
 .selectric-hover{
   border: 1px solid;
@@ -47,7 +48,7 @@ form.webform-submission-form{
     }
   }
   input, textarea, select{
-    background-color: rgba($degov-secondary, 0.1);
+    background-color: rgba($deGOV-secondary, 0.1);
     border-radius: 0;
     border: 0;
     &:hover,
@@ -56,7 +57,7 @@ form.webform-submission-form{
     }
   }
   .selectric{
-    background-color: rgba($degov-secondary, 0.1);
+    background-color: rgba($deGOV-secondary, 0.1);
     &:hover,
     &:focus{
       border: 0;
@@ -88,14 +89,14 @@ form.webform-submission-form{
 
       li{
         color: $color-white;
-        background-color: rgba($degov-secondary, 1);
+        background-color: rgba($deGOV-secondary, 1);
         &:hover,
         &:focus{
-          background-color: rgba($degov-secondary, 0.1);
+          background-color: rgba($deGOV-secondary, 0.1);
           color: $text-color;
         }
         &.selected{
-          background-color: rgba($degov-secondary, 0.1);
+          background-color: rgba($deGOV-secondary, 0.1);
           color: $text-color;
         }
       }
@@ -192,7 +193,7 @@ form.webform-submission-form{
 }
 .selectric-wrapper{
   .selectric{
-    background-color: rgba($degov-secondary, 0);
+    background-color: rgba($deGOV-secondary, 0);
     &:hover,
     &:focus{
       border: 0;
@@ -223,14 +224,14 @@ form.webform-submission-form{
     &-items{
       li{
         color: $color-white;
-        background-color: rgba($degov-secondary, 1);
+        background-color: rgba($deGOV-secondary, 1);
         &:hover,
         &:focus{
-          background-color: rgba($degov-secondary, 0.1);
+          background-color: rgba($deGOV-secondary, 0.1);
           color: $text-color;
         }
         &.selected{
-          background-color: rgba($degov-secondary, 0.1);
+          background-color: rgba($deGOV-secondary, 0.1);
           color: $text-color;
         }
       }
