--- a/source/sass/elements/_navs.scss
+++ b/source/sass/elements/_navs.scss
@@ -1,6 +1,6 @@
 .header__upper-menu{
   .language{
-    padding: $padding-large-vertical $padding-large-vertical*2 $padding-base-vertical $padding-large-vertical*2;
+    padding: $padding-large-vertical 0 $padding-base-vertical $padding-large-vertical*2;
     -webkit-font-smoothing: antialiased;
     @media(max-width: $screen-sm-min){
       display: flex;
@@ -153,7 +153,7 @@
     width: 100%;
     background: $color-white;
     margin-bottom: -1*($padding-base-vertical + 2 );
-    @media(max-width: $screen-sm){
+    @media(max-width: $screen-sm) {
       display: none;
     }
   }
@@ -162,7 +162,7 @@
     display: inline-block;
     height: 80px;
     width: 160px;
-    border-right: 1px solid $degov-light;
+    border-right: 1px solid $deGOV-light;
     float: left;
     font-size: $font-size-small - 2;
     font-weight: bold;
@@ -173,9 +173,18 @@
       text-decoration: none;
     }
     &.is-active {
-      &:after{
+      &:after {
         @include triangle-up($size: 10px);
-        border-bottom-color: $degov-secondary;
+        border-bottom-color: $deGOV-secondary;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+    &.active-trail {
+      &:after{
+        //@include triangle-up($size: 10px);
+        border-bottom-color: $deGOV-secondary;
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
@@ -194,6 +203,7 @@
       justify-content: center;
       height: 100%;
     }
+
     i{
       color: $brand-secondary;
       z-index: 1;
@@ -202,9 +212,14 @@
         font-size: $font-size-large;
       }
     }
+    &:hover{
+      span{
+        text-decoration: underline;
+      }
+    }
     &.menu-search{
-      border-right: 0px solid $degov-light;
-      border-left: 1px solid $degov-light;
+      border-right: 0px solid $deGOV-light;
+      border-left: 1px solid $deGOV-light;
       float: right;
       i{
         &:before{
@@ -240,7 +255,7 @@
     flex-direction: row;
     -webkit-flex-flow: row wrap;
     justify-content: flex-start;
-    background-color: $degov-secondary;
+    background-color: $deGOV-secondary;
     @media(max-width: 720px){
       display: none;
     }
@@ -251,6 +266,9 @@
   &__col{
     padding: $grid-gutter-width/4 $grid-gutter-width/2;
     display: none;
+    &.active-trail{
+      background: $brand-primary;
+    }
     &.is-active{
       display: block;
     }
@@ -345,7 +363,7 @@
       min-height: 210px;
       width: 24%;
       float: right;
-      background-color: $degov-secondary;
+      background-color: $deGOV-secondary;
       padding: $padding-base-horizontal + 5;
       color: $color-white;
       p{
@@ -537,7 +555,7 @@
     }
   }
   &__block > &__block-title {
-    border-top: 1px solid $degov-light;
+    border-top: 1px solid $deGOV-light;
     padding: $padding-large-vertical 0;
   }
   &__block-title, &__title{
@@ -562,7 +580,7 @@
     }
     input {
       border: none;
-      background: $degov-light;
+      background: $deGOV-light;
       padding: $padding-large-vertical $padding-xs-horizontal;
       width: 100%;
       font-size: $font-size-h6;
@@ -593,7 +611,7 @@
     margin: 0 $grid-gutter-width/-2;
     padding-left: $grid-gutter-width/2;
     padding-right: $grid-gutter-width/2;
-    background: $degov-light;
+    background: $deGOV-light;
     i {
       width: $font-size-h2;
       vertical-align: sub;
@@ -627,7 +645,7 @@
     display: block;
     position: absolute;
     margin-top: -2px;
-    z-index: 10;
+    z-index: 1000;
     width: 90%;
     background: $color-white;
     box-shadow: 3px 5px 5px $gray-base;
@@ -679,6 +697,7 @@
       }
     }
     &--level-4 {
+      padding: 0;
       font-size: $font-size-h6;
       > li {
         padding: $padding-base-vertical 0;
@@ -686,10 +705,13 @@
           font-size: $font-size-h6;
           font-weight: bold;
         }
+        >a.is-active{
+          font-weight: bold;
+        }
       }
     }
     ul {
-      padding-left: $grid-gutter-width;
+      padding-left: $grid-gutter-width/2.352;
       padding-top: $padding-large-vertical;
     }
   }
