--- a/source/sass/modules/node_normal_page/_node_normal_page.scss
+++ b/source/sass/modules/node_normal_page/_node_normal_page.scss
@@ -45,6 +45,9 @@
   .normal-page__teaser-text {
     font-size: $font-size-h6;
     font-weight: normal;
+    a{
+      font-weight: normal;
+    }
   }
   .normal-page__teaser-title {
     h3 {
