--- a/templates/system/footer--en.html.twig
+++ b/templates/system/footer--en.html.twig
@@ -14,7 +14,7 @@
         </div>
         <div class="footer__bottom-menu">
             <div class="footer__copyright col-md-6">
-                © 2017 deGov
+                © 2017 Office of the Prime Minister of North Rhine-Westphalia
             </div>
             <div class="footer__footer_menu col-md-6 right">
             {# demo menu #}
