--- a/templates/system/header-intro.html.twig
+++ b/templates/system/header-intro.html.twig
@@ -21,7 +21,7 @@
                     {% endif %}
                     {% if social_media_settings %}
                     <li><a href="/servicecenter/kontakt" title="Kontakt" class="kontakt">Kontakt</a></li>
-                    <li class="last"><a href="#" class="js-social-media-settings-open social-media-settings--menu-item hidden">{{ 'Social Media Settings'|trans }}<i class="fa fa-cog" aria-hidden="true"></i></a></li>
+                    <li class="last"><a role="button" href="#" class="js-social-media-settings-open social-media-settings--menu-item hidden">{{ 'Social Media Settings'|trans }}<i class="fa fa-cog" aria-hidden="true"></i></a></li>
                     {% else %}
                     <li class="last"><a href="/servicecenter/kontakt" title="Kontakt" class="kontakt">Kontakt</a></li>
                     {% endif %}
