--- a/templates/system/page--en.html.twig
+++ b/templates/system/page--en.html.twig
@@ -95,7 +95,8 @@
       <div class="header__branding">
           <a href="{{ url('<front>') }}">
             <div class="col-md-6 header__title">
-                <span>WIR IN DEGOV</span>
+                <span>WIR IN NRW</span>
+                DAS LANDESPORTAL
             </div>
           </a>
           <div class="col-xs-6 header__menu-icon">
