--- a/source/sass/components/_header.scss
+++ b/source/sass/components/_header.scss
@@ -78,7 +78,7 @@
 
 .header{
 	&__upper-menu{
-		min-height: 45px;
+		min-height: 42px;
 		background-color: $brand-secondary;
 		font-size: $font-size-small - 2;
 		color: $color-white;
@@ -109,7 +109,7 @@
 					min-height: auto;
 					padding: 0 $grid-gutter-width/2;
 					#service-menu li:first-child {
-						border-top: 1px solid $degov-light;
+						border-top: 1px solid $deGOV-light;
 					}
 					.right{
 						float: left;
@@ -122,7 +122,7 @@
 						width: 100%;
 						li{
 							width: 100%;
-							border-bottom: 1px solid $degov-light;
+							border-bottom: 1px solid $deGOV-light;
 							a,
 							a.gebaerdensprache,
 							a.leichtesprache,
@@ -158,6 +158,10 @@
 					color: $brand-secondary;
 					font-weight: normal;
 				}
+			}
+			.right{
+				padding: 0;
+				margin-right: $grid-gutter-width/2.66;
 			}
 		}
 		&	>  &--title{
@@ -200,8 +204,9 @@
 	}
 	&__branding{
 		background-color: $color-white;
-		min-height: 100px;
+		min-height: 88px;
 		position: relative;
+
 
 		}
 	&__logo{
@@ -212,7 +217,7 @@
 		height: 100%;
 		right: 0;
 		.image {
-			padding: 0 $grid-gutter-width/2;
+			padding: 0 0 0 $grid-gutter-width/2;
 		}
 		.image img{
 			float: right;
@@ -236,6 +241,9 @@
 			font-weight: bold;
 			display: inline-block;
 			width: 100%;
+		}
+		&:hover{
+				text-decoration: underline;
 		}
 	}
 	@media(max-width: $screen-sm-min){
