--- a/source/sass/modules/media_audio/_media-audio.scss
+++ b/source/sass/modules/media_audio/_media-audio.scss
@@ -4,7 +4,7 @@
   margin-left: -$vertical-gutter-width/2;
   margin-right: -$vertical-gutter-width/2;
   color: $color-white;
-  background-color: $degov-secondary;
+  background-color: $deGOV-secondary;
   padding-bottom: $vertical-gutter-width/2;
 
   img, audio {
@@ -47,7 +47,7 @@
       margin-bottom: $padding-large-vertical;
       &,
       a {
-        color: $degov-secondary;
+        color: $deGOV-secondary;
       }
     }
   }
@@ -56,7 +56,7 @@
     color: $brand-secondary;
     clear: both;
     &__header {
-      background: $degov-light;
+      background: $deGOV-light;
       font-weight: bold;
       padding: $padding-large-vertical $grid-gutter-width/2;
       cursor: pointer;
