--- a/source/sass/modules/media_citation/_media-citation.scss
+++ b/source/sass/modules/media_citation/_media-citation.scss
@@ -6,8 +6,13 @@
   }
   blockquote{
     border: 0;
+    margin:   0;
   }
+
   &__left {
+    &.no-title{
+      padding-bottom: 0;
+    }
     padding: $vertical-gutter-width/4*3 $padding-small-horizontal*5;
     &:after {
       @include triangle-right($color: $color-white);
