--- a/source/sass/modules/media_person/_media-person.scss
+++ b/source/sass/modules/media_person/_media-person.scss
@@ -4,7 +4,7 @@
   background: $brand-secondary;
   margin-left: $grid-gutter-width/-2;
   margin-right: $grid-gutter-width/-2;
-  border: 1px solid $degov-light;
+  border: 1px solid $deGOV-light;
   border-right: none;
   &__image {
     float: left;
