--- a/source/sass/modules/simplenews/_simplenews.scss
+++ b/source/sass/modules/simplenews/_simplenews.scss
@@ -9,7 +9,7 @@
   }
   input {
     max-width: 25em;
-    background: $degov-light;
+    background: $deGOV-light;
     border-radius: 0;
     box-shadow: none;
     border: none;
